# semantic-bundle-training

./: NOTES.md  main.py  modal_train.py  pyproject.toml
docs/: EXPERIMENT_002_interference_measurement.md  EXPERIMENT_003_rl_ssl_gradient_isolation.md  EXPERIMENT_004_affective_bundles_agentic.md  EXPERIMENT_005_optimal_overlap.md  PROCESS_llm_automated_experiments.md  REPORT_001_initial_validation.md
smoke_test_outputs/: smoke_test_results.json
src/: __init__.py  bundles.py  config.py  evaluation.py  routing.py  smoke_test.py  training.py
